# realtime-cg

./: .gitignore  .gitmodules  CMakeLists.txt  SkyboxShaderProgram.h
Linking/include/glad/: glad.h
Linking/lib/: glad.c
assets/models/: lamp.gltf  tv.glb
assets/models/primitives/: cube.glb  plane.glb  test.glb
assets/models/terrain/: LOW_POLY_TREE.glb  grass.glb
models/primitives/: cube.glb  sphere.glb
src/: BaseShaderProgram.h  ComputeShader.h  FPSCamera.h  GPUModelUploader.h  GeometryUtils.h  GltfLoader.cpp  GltfLoader.h  ImGuiWindowCreator.h  ImGuiWindows.h  ImageData.h  LectureShaderProgram.h  ModelShaderProgram.h  OpenglUtils.cpp  OpenglUtils.h  OrbitCamera.h  RenderBase.h  RenderCall.h  RenderEntity.h  RenderQueue.h  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  SkyboxShaderProgram.h  TextureHandle.h  TextureType.h  Utils.h  main.cpp  stb.cpp
src/Assignments/01-GLSL/: Assignment01.h  shader.frag  shader.vert
src/Final/: ChunkLODMesh.h  InstancingManager.h  Project.h  SimplexNoise.h  TerrainChunk.h  TerrainGenerator.h  TerrainManager.h  TerrainPatchLODGenerator.h
src/Lectures/: LectureBase.h
src/Lectures/00-DemoLecture/: Lecture00.h
src/Lectures/00-ImGuiTests/: ImGuiTests.h
src/Lectures/01-Triangle/: Lecture01.h  shader.frag
src/Lectures/02-MultipleDraws/: Lecture02.h  shader.vert
src/Lectures/03-MVP/: Lecture03.h  shader.frag  shader.vert
src/Lectures/04-Lighting/: Lecture04.h  shader.frag  shader.vert
src/Lectures/05-Textures/: Lecture05.h  shader.frag  shader.vert
src/Lectures/06-Textures2/: Lecture06.h  shader.vert  skybox.frag  skybox.vert
src/Lectures/07-Framebuffer/: Lecture07.h
src/Lectures/08-SSBOTest/: Lecture08.h  shader.frag  shader.vert
src/Shaders/: BaseShaderProgram.cpp  BaseShaderProgram.h
src/Shaders/GrassShaderInstanced/: GrassShaderInstancedProgram.h  shader.frag  shader.vert
src/Shaders/ModelShader/: ModelShaderProgram.h  shader.frag
src/Shaders/SkyboxShader/: SkyboxShaderProgram.h  shader.frag  shader.vert
src/Shaders/SunShader/: SunShaderProgram.h  shader.frag  shader.vert
src/Shaders/TerrainShader/: TerrainShaderProgram.h  shader.compute  shader.frag  shader.vert
src/Shaders/TilingShader/: TilingShaderProgram.h  shader.frag  shader.vert
src/Shaders/TreeShaderInstance/: TreeShaderInstancedProgram.h  shader.frag  shader.vert
src/Shaders/WaterShader/: WaterShaderProgram.h  shader.frag  shader.vert
